# nibble

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
include/raks/dtype/: nibble.hpp  nibble_ref.hpp
include/raks/nibble/: iterator.hpp  nibble.hpp
src/: nibble.cpp
test/: CMakeLists.txt
test/src/: test.cpp
test_package/src/: example.cpp
